<resources>
    <string name="app_name" translatable="false">Sapio</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="warning_title">Before you contribute</string>
    <string name="warning_desc"><![CDATA[You are tasked with evaluating the behavior of an Android application on a deGoogled bare Android Open Source Project (AOSP) device.<br><br>Therefore, your device must not have the official Google Play Services installed<br><br>Make sure to understand properly the <a href="%1$s">rating rules</a> before contributing.]]></string>
    <string name="proceed">Proceed</string>
    <string name="select_button">Select</string>
    <string name="select_application_text">Select the application to evaluate</string>
    <string name="select_application_error">The app does not have dependencies to Google Play Services</string>
    <string name="note_application_text">You can now evaluate the application</string>
    <string name="select_evaluation_error">Please select an evaluation</string>
    <string name="microg_label" translatable="false">microG</string>
    <string name="bare_aosp_label" translatable="false">bareAOSP</string>
    <string name="standard_label" translatable="false">standard</string>
    <string name="permissive_label" translatable="false">permissive</string>
    <string name="user_label">User</string>
    <string name="root_label" translatable="false">Root</string>
    <string name="works_perfectly">It works perfectly. All features are working.</string>
    <string name="works_partially">It works partially. Some features do not work.</string>
    <string name="dont_work">It does not work at all or crashes.</string>
    <string name="broken_features_label">Which features don\'t work?</string>
    <string name="history_title">Evaluation history</string>
    <string name="broken_features_not_working">Doesn\'t work</string>
    <string name="broken_feature_notifications">Notifications</string>
    <string name="broken_feature_in_app_purchase">In-app purchases</string>
    <string name="broken_feature_login">Login</string>
    <string name="broken_feature_maps">Maps</string>
    <string name="broken_feature_location">Location</string>
    <string name="broken_feature_payments">Contactless payment</string>
    <string name="broken_feature_cast">Screen casting</string>
    <string name="broken_feature_augmented_reality">Augmented reality</string>
    <string name="feature_negation">no</string>
    <string name="upload_error">Error evaluating app</string>
    <string name="about_text">Sapio is the anagram of Open Source API.\n\nSapio provides the compatibility of an Android application running on a device without Google Play Services (i.e. deGoogled bare Android Open Source Project (AOSP) devices, coupled or not with microG).\n\nSapio can serve as a lobbying tool by sharing compatibility on social media to raise awareness among app developers about respecting users\' personal data.\n\nEvaluations in Sapio are given to the community by the community.</string>
    <string name="credits">Brain icons created by Freepik - Flaticon</string>
    <string name="environment_detected">Environment detected</string>
    <string name="look_for_an_application">Look for an application</string>
    <string name="search_hint">Search applications...</string>
    <string name="updated_on">Updated on %1$s</string>
    <string name="android_compatibility_matrix">Android Compatibility</string>
    <string name="android_compatibility_subtitle">without Google Play Services</string>
    <string name="application_name">Application name</string>
    <string name="package_name">Package name</string>
    <string name="feed_title">Feed</string>
    <string name="search_title">Search</string>
    <string name="contribute_title">Contribute</string>
    <string name="options_title">Options</string>
    <string name="device_title">Device</string>
    <string name="about">About</string>
    <string name="validate_button">Validate</string>
    <string name="thank_you">Thank you for evaluating the application</string>
    <string name="good">Works perfectly</string>
    <string name="good_short">Perfect</string>
    <string name="average">One or more feature don\'t work</string>
    <string name="average_short">Partial</string>
    <string name="bad">Does not work at all</string>
    <string name="bad_short">Unusable</string>
    <string name="unknown">Unknown</string>
    <string name="share">Share</string>
    <string name="share_text">Feel free to share your evaluation on social media to raise awareness among app developers about respecting users\' personal data.</string>
    <string name="share_android_compatibility">%1$s Android Compatibility</string>
    <string name="share_compatibility_report">Android compatibility for %1$s</string>
    <string name="support_privacy_focused_apps">Android apps that respect you!</string>
    <string name="donate">Buy me a coffee</string>
    <string name="settings">Settings</string>
    <string name="compatibility_check_channel_name">Compatibility checks</string>
    <string name="compatibility_check_channel_description">Notifications about apps that are incompatible with your configuration.</string>
    <string name="compatibility_check_notification_title">Incompatible app</string>
    <string name="compatibility_check_notification_body">%1$s doesn\'t seem to work properly without Google Play Services. Help us make noise -- share this and tag the developer to request a privacy-respecting version!</string>
    <string name="compatibility_check_notification_share_action">Share now</string>
    <string name="rating_rules"><![CDATA[<a href="%1$s">Rating rules</a>]]></string>
    <string name="i_have_read_and_i_understand_the_rating_rules">I have read and I understand the rating rules</string>
    <string name="show_unsafe">Environments</string>
    <string name="show_unsafe_environments">Show permissive environments</string>
    <string name="general">General</string>
    <string name="theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">System default</string>
    <string name="github_star">Star on GitHub</string>
    <string name="github_url" translatable="false">https://github.com/jonathanklee/Sapio</string>
    <string name="website_url" translatable="false">https://checksap.io</string>
    <plurals name="date_minutes_ago">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="date_hours_ago">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="date_days_ago">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="date_months_ago">
        <item quantity="one">%d month ago</item>
        <item quantity="other">%d months ago</item>
    </plurals>
    <plurals name="date_years_ago">
        <item quantity="one">%d year ago</item>
        <item quantity="other">%d years ago</item>
    </plurals>
</resources>
