<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/general">
        <SwitchPreferenceCompat
            android:key="show_root"
            android:title="@string/show_unsafe"
            android:summary="@string/show_unsafe_environments"
            android:defaultValue="false" />

        <ListPreference
            android:key="theme_mode"
            android:title="@string/theme"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:defaultValue="system"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/about">
        <Preference
            android:key="github_star_preference"
            android:title="@string/github_star" />
        
        <Preference
            android:key="donate_preference"
            android:title="@string/donate" />
        
        <Preference
            android:key="about_preference"
            android:title="@string/about" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
